--- a/templates/custom-helppage-admin.html.twig
+++ b/templates/custom-helppage-admin.html.twig
@@ -55,7 +55,7 @@
 
         <li><input type="checkbox" />Favicon einbinden: <a href="/admin/config/user-interface/responsive_favicons" target="_blank">admin/config/user-interface/responsive_favicons</a></li>
 
-        <li><input type="checkbox" /><a href="https://google-webfonts-helper.herokuapp.com/fonts" target="_blank">Webfont-Helper</a> | <a href="https://www.fontsquirrel.com/tools/webfont-generator" target="_blank">Font-Squirrel</a>
+        <li><input type="checkbox" /><a href="https://gwfh.mranftl.com/fonts" target="_blank">Webfont-Helper</a> | <a href="https://www.fontsquirrel.com/tools/webfont-generator" target="_blank">Font-Squirrel</a>
       </ul>
     </div>
   </details>
@@ -78,7 +78,8 @@
 
         <li><input type="checkbox" />Install <a href="https://www.drupal.org/project/upgrade_rector">Upgrade Rector</a> <a href="https://www.drupal.org/project/upgrade_rector/issues/3322943">(Patch for alpha8)</a> and <a href="/admin/reports/upgrade-rector" target="_blank">Upgrade with rector</a> oder (auch ohne Patch):<br>
         <code>vendor/bin/rector process ./web/modules/contrib/[YOUR_MODULE] --dry-run</code><br>
-        <code>vendor/bin/rector process ./web/themes/custom/fus --dry-run</code><br></li>
+        <code>vendor/bin/rector process ./web/themes/custom/fus --dry-run</code><br>
+        <i>error ContainerConfIgurator</i>: <a href="https://www.drupal.org/project/rector/issues/3310712#comment-15078849">rector/issues/3310712</a></li>
 
         <li><a href="https://www.palantir.net/rector" target="_blank">Palantir Drupal rector</a></li>
 
@@ -234,7 +235,23 @@
     </summary>
     <div class="claro-details__wrapper">
         <ul>
-
+          <>Style <a href="https://developer.chrome.com/blog/font-fallbacks/">Fallback-Fonts:</a><br>
+          Get Metrics for Fallback-Font: <a href="https://github.com/khempenius/font-fallbacks-dataset">https://github.com/khempenius/font-fallbacks-dataset</a><br>
+          Or: <a href="https://fontdrop.info/">https://fontdrop.info/</a> -> ascender, descender, lineGap, unitsPerEm<br>
+          <code>@font-face {
+            font-family: "Fallback-Font";
+            src: local("Arial");
+            ascent-override: #{math.div(ascender,unitsPerEm) * 100%};
+            descent-override: #{math.div(descender,unitsPerEm) * 100%};
+            line-gap-override: #{math.div(lineGap,unitsPerEm) * 100%};
+          }</code><br>
+          <code>@font-face {
+            font-family: "OpenSans-Fallback";
+            src: local("Arial");
+            ascent-override: 107%;
+            descent-override: 29%;
+            line-gap-override: 0%;
+          }</code></li>
           <li><input type="checkbox" />Regex: Find multiline CSS-Comments: \/\*[\s\S]+?\*\/</li>
 
           <li><input type="checkbox" />Chrome: CSS / JS Sources Coverage</li>
@@ -323,26 +340,30 @@
           Password &amp; ggf. subdirectory</li>
 
         <li><input type="checkbox" />Public RSA-Key hochladen: <code>ssh-copy-id [SSH-Name]</code><br>
-        <small>Oder: Lokal <code>cat ~/.ssh/id_rsa.pub</code> und remote <code>echo "ssh-rsa ssh-rsa AAAAB3N...Wf4eRQ==" >> ~/.ssh/authorized_keys</code></small><br>
-        https://www.webgo.com.au/knowledgebase/68/The-Guide-to-Generating-and-Uploading-SSH-Keys.html</li>
+        <small>Oder: Lokal <code>cat ~/.ssh/id_rsa.pub</code> und remote <code>echo "ssh-rsa ssh-rsa AAAAB3N...Wf4eRQ==" >> ~/.ssh/authorized_keys</code><br>
+        https://www.webgo.com.au/knowledgebase/68/The-Guide-to-Generating-and-Uploading-SSH-Keys.html<br>
+        AllInkl: Put the whole key <code>cat ~/.ssh/id_rsa.pub</code> into "kas -> Tools > SSH-Zugänge"</small></li>
 
         <li><input type="checkbox" />Install Shell-Script in root: <i>iTerm2>Install Shell Integration</i>
 
-        <li><input type="checkbox" />Installations-script 'xxx-install.sh' in <i>root</i> hochladen und ausführen: <code>sh install.sh</code></li>
+        <li><input type="checkbox" />Installations-script in <i>Webserver-Root</i> hochladen <code>scp install-xyz.sh [SSH-Name]:./</code> und ausführen: <code>sh ~/install-xyz.sh</code></li>
 
 
         <li><input type="checkbox" />Bei WebGo muss ggf die PHP-Version des Servers beim Support umgestellt werden! Siehe E-Mails von support@webgo.de mit Betreff "webgoGmbH"<br>
         Ggf. <a href="https://raw.githubusercontent.com/drush-ops/drush/8.x/examples/example.drush.ini">drush.ini</a> installieren <a href="https://github.com/drush-ops/drush/issues/3294#issuecomment-370201342">(PHP definieren)</a></li>
 
-        <li><input type="checkbox" />Edit .bash_profile</br>
-        <code>PS1='\[\033[1;31m\]\u\[\033[1;33m\]@\[\033[1;36m\]\h \[\033[1;33m\]\w \[\033[1;32m\]# \[\033[0m\]'<br>
+        <li><input type="checkbox" />Edit .bash_profile (ggf. PHP-Version anpassen!)</br>
+        <code>SHORTCUT="[CHANGE to NAME]"<br>
+          PS1='\[\033[01;35m\]$SHORTCUT\[\033[00m\]:\[\033[01;34m\]\w\[\033[00m\]\$ '<br>
+          PROMPT_COMMAND='echo -ne "\033]0;$SHORTCUT: ${PWD/$HOME/~}\007";history -a'<br>
           # User specific aliases and functions<br>
           alias php='/usr/bin/php8.1'<br>
           alias composer='php ~/composer.phar'<br>
           alias drush='php ./vendor/bin/drush'<br>
           alias ls='ls -Agoh'<br>
           echo "cd www/[Change to SUBDIRECTORY]"<br>
-          ls</code></li>
+          ls</code><br>
+          <code>source ~/.bash_profile</code></li>
 
       </ul>
       <h4>Remote Work</h4>
@@ -351,6 +372,12 @@
         <li><input type="checkbox" />FTP from local folder: Upload assets.zip, composer.json, patches.json, db-file.sql (ohne Komprimierung)<br>
         <code>scp composer.json patches.json assets.zip db-file.sql [SSH-ALIAS]:www/[SUBDIRECTORY]</code>
         </li>
+
+        <li>Workaround Superfish D^9:<br>
+        <code>composer remove 'drupal/superfish'</code><br>
+        <code>composer require mglaman/composer-drupal-lenient</code><br>
+        <code>composer config --merge --json extra.drupal-lenient.allowed-list '["drupal/superfish"]'</code></li>
+        <code>composer require 'drupal/superfish:1.x-dev@dev'</code></li>
 
         <li><input type="checkbox" />open <i>composer.json</i> and (temporary) remove file-mapping for <i>.htaccess</i>:
           <code>"[web-root]/.htaccess": false</code><br>
@@ -397,10 +424,10 @@
         </li>
 
 
-        <li><input type="checkbox" />Settings anpassen: ./web/sites/default/settings.php<br />
+        <li><input type="checkbox" />Settings anpassen: ./web/sites/default/settings.php ('sed' is not allowed on remote)<br />
         <code>chmod 777 ./web/sites/default/settings.php</code><br>
-          506 $settings['<code>file_private_path</code>'] = <code>$app_root . '/../private'</code>;<br />
-          $settings['<code>config_sync_directory</code>'] = <code>$app_root . '/../config/sync'</code>;<br>
+          506 $settings['<code>file_private_path</code>'] = <code>$app_root . '/../private';</code><br />
+          $settings['<code>config_sync_directory</code>'] = <code>$app_root . '/../config/sync';</code><br>
           700 <code>$settings['trusted_host_patterns']</code><br>
           End of Database <code>'init_commands' => [
               'isolation_level' => 'SET SESSION TRANSACTION ISOLATION LEVEL READ COMMITTED',
@@ -410,7 +437,7 @@
 
         <li><input type="checkbox" />In der Webseite Updates-Skript aufrufen oder <code>php ./vendor/bin/drush updb</code></li>
 
-        <li>Local &amp; Remote: <code>rm db-file.sql assets.zip</code></li>
+        <li>Local &amp; Remote: <code>rm assets.zip db-file.sql db-file.sql.gz</code></li>
 
          <li><input type="checkbox" /><a href="/admin/config/media/file-system" target="_blank">Check Private Filesystem</a>: <i>{{privatepath}}</i></li>
 
@@ -479,7 +506,9 @@
       <ul>
 
       <li><a href="https://search.google.com/search-console" target="_blank">Search Console</a><br>
-      <code>sitemap.xml</code></li>
+      <a href="/admin/config/search/metatag/global">MetaTag:</a> <code>Website-Verifizierung</code> für '<i>Google Site Verification</i>' einfügen.<br>
+      <code>sitemap.xml</code> eintragen</li>
+
       </ul>
     </div>
   </details>
@@ -505,8 +534,7 @@
       <h3>E-Mail</h3>
     </summary>
     <div class="claro-details__wrapper">
-        <code>
-          <p>Ihre neue Webseite ist online:<br>
+        <code><p>Ihre neue Webseite ist online:<br>
             {{host}}
           </p>
           <p>Ich habe Ihnen einen Zugang auf Ihrer neuen Webseite eingerichtet, damit Sie ggf. die Möglichkeit haben, Inhalte selbstständig zu ändern:</p>
@@ -532,11 +560,10 @@
           </p>
           <p>
             Nach der Anmeldung finden Sie online eine kurze Einführung zu Ihrer Webseite.<br>
-            Klicken Sie dafür ganz oben im weiß hinterlegten Menü ganz rechts auf „Hilfe“.<br>
+            Klicken Sie dafür im Administrations-Menü ganz rechts auf „Hilfe“.<br>
             Oder klicken Sie nach der Anmeldung direkt auf diesen Link:<br>
             {{host}}/admin/userhelp
-          </p>
-        </code>
+          </p></code>
       </div>
   </details>
 
