Changes for Gin-Theme

--- a/templates/custom-helppage-user.html.twig
+++ b/templates/custom-helppage-user.html.twig
@@ -77,12 +77,13 @@
 
         <li>Alternativ kann jeder Inhalt auch direkt auf der entsprechenden Seite zum Bearbeiten geöffnet werden: Wird zum Beispiel die Seite <a href="/node/2">Impressum</a> im Browser aufgerufen, dann erscheint in der Nähe des Seitentitels ein Menü "Ansicht | Bearbeiten | Löschen". Bei Klick auf "Bearbeiten" öffnet sich das Formular zum Bearbeiten des Textes.</li>
 
-        <li>Eine weitere Alternative (auch zum <strong>Bearbeiten weiterer Inhalte</strong>): Wenn Sie eine Seite Ihrer Webseite im Browser zur Ansicht geöffnet haben, dann erscheint ganz oben links neben Ihrem Namen nach einem Klick auf "Bearbeiten" auch ein kleines rundes Stift-Symbol rechts oberhalb aller editierbaren Inhalte (auch z.B. der Menüpunkte oder der Texte am Ende der Webseite).<br>
-        <img src="{{assets}}/edit-button.png" alt="Bearbeiten-Button" width="460" height="267"><br>
-        Bei Klick auf das jeweilige Stift-Symbol und Auswahl von "Bearbeiten" öffnet sich das Formular zum Bearbeiten des ausgewählten Inhalts.</li>
+        <li>Eine weitere Alternative (auch zum <strong>Bearbeiten weiterer Inhalte</strong>): Wenn Sie eine Seite Ihrer Webseite im Browser zur Ansicht geöffnet haben, dann erscheint oben rechts in der zweiten Zeile des Admininstrations-Menüs nach einem Klick auf "Bearbeiten" ein kleines rundes Stift-Symbol rechts oberhalb aller editierbaren Inhalte (auch z.B. der Menüpunkte oder der Texte am Ende der Webseite).<br>
+        <img src="{{assets}}/edit-button-gin.png" alt="Bearbeiten-Button" width="460" height="267"><br>
+        Bei Klick auf das jeweilige Stift-Symbol und Auswahl von "Bearbeiten" öffnet sich das Formular zum Bearbeiten des ausgewählten Inhalts.<br>
+        Je nach bearbeitetem Inhalt muss die Seite u.U. erneut geladen werden, um die Änderungen sichtbar zu machen.</li>
       </ul>
 
-      <p>Nach jeder gewünschten Änderungen nicht vergessen, am Ende der jeweiligen Formular-Seite auf "Speichern" zu klicken. Ansonsten die Seite einfach irgendwie verlassen, um die Änderungen zu verwerfen.</p>
+      <p>Nach jeder gewünschten Änderungen nicht vergessen, auf "Speichern" zu klicken. Ansonsten die Seite einfach irgendwie verlassen, um die Änderungen zu verwerfen.</p>
     </div>
   </details>
 
