Added module to uninstall

--- a/templates/custom-helppage-admin.html.twig
+++ b/templates/custom-helppage-admin.html.twig
@@ -209,10 +209,10 @@
           <li><input type="checkbox" />Revisionen löschen: <code>drush err:purge</code></li>
 
           <li><input type="checkbox" /><a href="/admin/modules/uninstall" target="_blank">Uninstall Modules</a><br>
-            Audit Files, Devel, Config Delete, Field UI, Views UI, Database Logging, Download Folder<br>
+            Audit Files, Devel, Config Delete, Field UI, Views UI, Database Logging, Download Folder, Upgrade Status<br>
             Configuration Manager<br>
             <code>drush pmu devel auditfiles</code><br>
-            <code>composer remove drupal/devel drupal/devel_kint_extras drupal/auditfiles</code></li>
+            <code>composer remove drupal/devel drupal/devel_kint_extras drupal/auditfiles drupal/upgrade_status</code></li>
 
           <li><input type="checkbox" /><a href="/admin/reports/dblog/confirm" target="_blank" >Clear Database Log</a></li>
 
